<resources>
    //resource for the name of the app
    <string name="app_name">The Avengers</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">LOG IN</string>
    <string name="forget_password">Forget Password</string>
    <string name="register">RegisterYourself</string>
    <string name="send_message">Send Message</string>
    <string name="enter_your_message_here">Enter Your Message here</string>
    <string name="Shared_Preference_of_this_app">Avengers Preference</string>
    <string name="log_out">Log Out</string>
</resources>